adding more configs

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,8 +6,9 @@ RUN apk --update --no-cache add \
 	php-fpm \
 	php-ldap
 
-COPY php.ini /etc/php7/conf.d/50-setting.ini
+COPY php.ini /etc/php7/conf.d/php.ini
 COPY php-fpm.conf /etc/php7/php-fpm.conf
+COPY www.conf /etc/php7/php-fpm.d/www.conf
 
 WORKDIR /var/www/html
 
